Include only android and editor in main asmdef file.

--- a/Assets/Cardboard/MobfishCardboard.asmdef
+++ b/Assets/Cardboard/MobfishCardboard.asmdef
@@ -1,3 +1,15 @@
-﻿{
-	"name": "MobfishCardboard"
+{
+    "name": "MobfishCardboard",
+    "references": [],
+    "optionalUnityReferences": [],
+    "includePlatforms": [
+        "Android",
+        "Editor"
+    ],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": []
 }
