--- a/Assets/Cardboard/MobfishCardboard.asmdef
+++ b/Assets/Cardboard/MobfishCardboard.asmdef
@@ -1,15 +1,3 @@
-{
-    "name": "MobfishCardboard",
-    "references": [],
-    "optionalUnityReferences": [],
-    "includePlatforms": [
-        "Android",
-        "Editor"
-    ],
-    "excludePlatforms": [],
-    "allowUnsafeCode": false,
-    "overrideReferences": false,
-    "precompiledReferences": [],
-    "autoReferenced": true,
-    "defineConstraints": []
+﻿{
+	"name": "MobfishCardboard"
 }
