Add InputSystem Support for head simulation Add gradle templates for Unity 2019

--- a/Assets/Cardboard/MobfishCardboard.asmdef
+++ b/Assets/Cardboard/MobfishCardboard.asmdef
@@ -1,7 +1,8 @@
 {
     "name": "MobfishCardboard",
-    "references": [],
-    "optionalUnityReferences": [],
+    "references": [
+        "Unity.InputSystem"
+    ],
     "includePlatforms": [
         "Android",
         "Editor",
@@ -12,5 +13,7 @@
     "overrideReferences": false,
     "precompiledReferences": [],
     "autoReferenced": true,
-    "defineConstraints": []
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
